--- a/styles/styles.css
+++ b/styles/styles.css
@@ -55,46 +55,10 @@ li {
   bottom: 50%;
 
 }
-.searchselect {
 
-  border: 0;
-  box-shadow: none;
-  background-color: rgba(0,50,0,0.1);
-  color: rgba(0,50,0,0.6);
-  width: 18.6%;
-  margin-right: 0;
-  padding: 5px 5px 5px 5px;
-  -webkit-appearance:none;
-  -moz-appearance:none;
-  appearance:none;
-  cursor: pointer;
-  text-align: center;
-
-}
-.formsearchbar{
-
-  background-color: inherit;
-  width: 80%;
-  margin-left: auto;
-  margin-right: auto;
-
-}
-.searchbar {
-
-  border: none;
-  box-shadow: none;
-  background-color: rgba(0,50,0,0.1);
-  padding: 5px 5px 5px 5px;
-  width: 80%;
-  display: inline-block;
-  text-align: center;
-  color: rgba(0,50,0,0.4);
-
-}
 .tiles{
 
   color: rgba(0,0,0,0.55);
-
 
 }
 .row {
@@ -124,7 +88,9 @@ li {
 }
 .quotes {
 
-  padding: 5px 5px 15px 5px;
+  padding: 5px;
+  margin-bottom: 12px;
+  margin-top: 12px;
 
 }
 .boxes {
@@ -135,7 +101,7 @@ li {
   border: none;
   text-align: center;
   font-family: sans-serif;
-  margin-top: 8px;
+  margin-top: 16px;
   margin-right: 1%;
 
 }
@@ -164,13 +130,14 @@ li {
 }
 .box5 {
 
-  width: 45%;
+  float: left;
+  width: 39%;
   margin-left: 10%;
 
 }
 .box6 {
 
-  width: 34%;
+  width: 40%;
   margin-right: auto;
 
 }
